--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+    
+    <div id="hour-9" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            9AM
+        </div>
+        <textarea class="col-md-10 description">
+                       </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-10" class="row time-block">
+        <div class="col-md-1 hour">
+            10AM
+        </div>
+        <textarea class="col-md-10 description">
+                           </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
     </div>
 
     <script src="assets/script.js"></script>
