--- a/index.html
+++ b/index.html
@@ -42,9 +42,31 @@
         </button>
     </div>
 
-    <div id="hour-10" class="row time-block">
+    <div id="hour-10" class="row time-block mb-2">
         <div class="col-md-1 hour">
             10AM
+        </div>
+        <textarea class="col-md-10 description">
+                           </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-11" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            11AM
+        </div>
+        <textarea class="col-md-10 description">
+                       </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-12" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            12AM
         </div>
         <textarea class="col-md-10 description">
                            </textarea>
