--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             10AM
         </div>
         <textarea class="col-md-10 description">
-                           </textarea>
+                        </textarea>
         <button class="btn saveBtn col-md-1">
             <i class="fas fa-save"></i>
         </button>
@@ -69,7 +69,62 @@
             12AM
         </div>
         <textarea class="col-md-10 description">
-                           </textarea>
+                        </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-1" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            1PM
+        </div>
+        <textarea class="col-md-10 description">
+                       </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-2" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            2PM
+        </div>
+        <textarea class="col-md-10 description">
+                        </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-3" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            3PM
+        </div>
+        <textarea class="col-md-10 description">
+                       </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-4" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            4PM
+        </div>
+        <textarea class="col-md-10 description">
+                       </textarea>
+        <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+        </button>
+    </div>
+
+    <div id="hour-5" class="row time-block mb-2">
+        <div class="col-md-1 hour">
+            5PM
+        </div>
+        <textarea class="col-md-10 description">
+                       </textarea>
         <button class="btn saveBtn col-md-1">
             <i class="fas fa-save"></i>
         </button>
